[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "story-indexer"
version = "0.0.1"
dependencies = [
  "beautifulsoup4 ~= 4.12.2",
  "boto3 ~= 1.28.44",
  "docker ~= 6.1.0",
  "elasticsearch ~= 8.9.0",
  "mediacloud-metadata ~= 0.10.0",
  "pika ~= 1.3.2",
  "rabbitmq-admin ~= 0.2",
  "statsd_client ~= 1.0.7",
  "scrapy ~= 2.10.1",
  "supervisor ~= 4.2.5",
  "sentry-sdk ~=1.34.0",
  "warcio ~= 1.7.4",
]

[project.optional-dependencies]
dev = [
  "boto3-stubs[s3] ~= 1.34.13",
  "mypy ~= 1.5.1",
  "jinja2-cli ~= 0.8.2",
  "pre-commit ~= 3.4.0",
  "pytest ~= 7.4.2",
  "types-beautifulsoup4 ~= 4.12.0.20240106",
  "types-pika ~= 1.2.0b1",
  "types-requests ~=2.31.0.2",
]


[tool.isort]
profile = "black"

[tool.mypy]

# allow "mypy ."
exclude = ["bin/pre-commit-wrapper.py", "venv"]

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

# look for local stubs to PyPI packages in top level stubs directory
mypy_path = "stubs"

[tool.pip-tools]
allow-unsafe = true
quiet = true
resolver = "backtracking"
upgrade = true
# To enable Hash-Checking-Mode uncomment the following line
# generate-hashes = true

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#custom-discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["indexer*"]
exclude = ["indexer.tests*"]
namespaces = false
